# format-img

./: .gitignore  README.md  config.ini  format-img.py  modify-exif.py  myUtility.py  pyproject.toml  requirements.txt  update-datetime.ps1
.github/workflows/: publish.yml
scripts/: update-datetime.ps1
src/format_img/: __init__.py  format_img.py  modify_exif.py  my_utility.py
